--- a/index.html
+++ b/index.html
@@ -5,37 +5,54 @@
 <h3 id="-software-engineer-"><em>Software Engineer</em></h3>
 <hr>
 <hr>
-<p>Minsk, Belarus</p>
-<p>+375-29 871-54-46</p>
+<p>Moscow, Russia</p>
+<p>+37 903 293-00-37</p>
 <p><a href="mailto:m.shaverdo@gmail.com">m.shaverdo@gmail.com</a></p>
 <h2 id="skills">Skills</h2>
 <ul>
-<li><strong>Primary languages</strong><ul>
-<li>GO: highload, microservices</li>
-<li>PHP: OO-PHP, Symfony, Doctrine, Composer</li>
-<li>MySQL: DB design, query optimization</li>
+<li><strong>Primary languages and technologies</strong><ul>
+<li>Golang</li>
+<li>Kubernetes</li>
+<li>Service mesh</li>
+<li>Linux</li>
 </ul>
 </li>
 <li><strong>Auxiliary languages</strong><ul>
+<li>PHP</li>
 <li>Python</li>
-<li>RegExp</li>
 <li>JavaScript</li>
-<li>C</li>
-<li>HTML</li>
-<li>CSS</li>
 <li>Bash</li>
-</ul>
-</li>
-<li><strong>Tools</strong><ul>
-<li>Git</li>
-<li>Mercurial</li>
-<li>JIRA</li>
 </ul>
 </li>
 </ul>
 <hr>
 <hr>
 <h2 id="experience">Experience</h2>
+<h3 id="senior-software-engineer-in-avito-moscow-russia-">Senior Software Engineer in Avito - Moscow, Russia.</h3>
+<h3 id="-apr-2019-now-"><em>Apr 2019 - Now</em></h3>
+<p><strong>Responsibilities:</strong></p>
+<ul>
+<li>Develop and maintain cloud infrastructure services</li>
+</ul>
+<p><strong>Key achievements:</strong></p>
+<ul>
+<li>Designed &amp; implemented multicluster service mesh: <a href="https://github.com/avito-tech/navigator">https://github.com/avito-tech/navigator</a></li>
+</ul>
+<hr>
+<h3 id="senior-software-engineer-in-synesis-minsk-belarus-">Senior Software Engineer in Synesis - Minsk, Belarus.</h3>
+<h3 id="-apr-2018-mar-2019-"><em>Apr 2018 - Mar 2019</em></h3>
+<p><strong>Responsibilities:</strong></p>
+<ul>
+<li>Maintain own forks of Kubernetes, Calico, etcd</li>
+<li>Develop infrastructure services</li>
+<li>Interviewing new employees</li>
+</ul>
+<p><strong>Key achievements:</strong></p>
+<ul>
+<li>Designed &amp; implemented network consistency daemon</li>
+<li>Implemented numerous features in kubernetes fork: API requests throttling, prevent IP addresses leaks, split brain preventing, etc</li>
+</ul>
+<hr>
 <h3 id="lead-developer-in-bookie-minsk-belarus-">Lead Developer in Bookie - Minsk, Belarus.</h3>
 <h3 id="-dec-2012-jan-2017-"><em>Dec 2012 - Jan 2017</em></h3>
 <p><strong>Responsibilities:</strong></p>
