--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 <p><strong>Key achievements:</strong></p>
 <ul>
 <li>Designed &amp; implemented network consistency daemon</li>
-<li>Implemented numerous features in kubernetes fork: API requests throttling, prevent IP addresses leaks, split brain preventing, etc</li>
+<li>Implemented some features in kubernetes fork: API requests throttling, prevent IP addresses leaks, split brain preventing, etc</li>
 </ul>
 <hr>
 <h3 id="lead-developer-in-bookie-minsk-belarus-">Lead Developer in Bookie - Minsk, Belarus.</h3>
