--- a/index.html
+++ b/index.html
@@ -1,7 +1,4 @@
-<html><head><style>body {
-   color: black;
-}
-</style></head><body><h1 id="mikhail-shaverdo">Mikhail Shaverdo</h1>
+<h1 id="mikhail-shaverdo">Mikhail Shaverdo</h1>
 <h3 id="-software-engineer-"><em>Software Engineer</em></h3>
 <hr>
 <hr>
@@ -10,18 +7,17 @@
 <p><a href="mailto:m.shaverdo@gmail.com">m.shaverdo@gmail.com</a></p>
 <h2 id="skills">Skills</h2>
 <ul>
-<li><strong>Primary languages and technologies</strong><ul>
+<li><strong>Primary</strong><ul>
 <li>Golang</li>
 <li>Kubernetes</li>
-<li>Service mesh</li>
 <li>Linux</li>
+<li>Hihgload Architecture</li>
 </ul>
 </li>
-<li><strong>Auxiliary languages</strong><ul>
-<li>PHP</li>
+<li><strong>Sidearm</strong><ul>
 <li>Python</li>
-<li>JavaScript</li>
 <li>Bash</li>
+<li>PHP</li>
 </ul>
 </li>
 </ul>
@@ -37,6 +33,13 @@
 <p><strong>Key achievements:</strong></p>
 <ul>
 <li>Designed &amp; implemented multicluster service mesh: <a href="https://github.com/avito-tech/navigator">https://github.com/avito-tech/navigator</a></li>
+<li>Migrated N (sorry, NDA) Petabytes of images to Ceph</li>
+<li>Designed/partially implemented (with colleagues) images transformation subsystem</li>
+<li>Led internal project of user-generated content storage</li>
+<li>Designed &quot;backend system design&quot; interview section </li>
+<li>Interviewed 100+ employee candidates</li>
+<li>Acting as team scrum master</li>
+<li>Made several presentatinos on public conferences</li>
 </ul>
 <hr>
 <h3 id="senior-software-engineer-in-synesis-minsk-belarus-">Senior Software Engineer in Synesis - Minsk, Belarus.</h3>
@@ -118,4 +121,3 @@ games. <strong>PHP, mysql, symfony, doctrine, microservices</strong></li>
 <h2 id="education">Education</h2>
 <p><strong>Belarusian State University of Informatics and Radioelectronics</strong></p>
 <p>Faculty of Computer Systems and Networks, 2018</p>
-</body></html>
