--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <li>Designed &quot;backend system design&quot; interview section </li>
 <li>Interviewed 100+ employee candidates</li>
 <li>Acting as team scrum master</li>
-<li>Made several presentatinos on public conferences</li>
+<li>Made several presentatinos in public conferences</li>
 </ul>
 <hr>
 <h3 id="senior-software-engineer-in-synesis-minsk-belarus-">Senior Software Engineer in Synesis - Minsk, Belarus.</h3>
